update broken mysql logo & add pricing tab to nav

--- a/res/pages/home.html
+++ b/res/pages/home.html
@@ -62,6 +62,10 @@
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     </div>
                                     <div class="col-12 p-2 display-5">
+                                        <i class="bi bi-chevron-double-right opacity-0"></i>&nbsp;Pricing
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    </div>
+                                    <div class="col-12 p-2 display-5">
                                         <i class="bi bi-chevron-double-right opacity-0"></i>&nbsp;Contact Me
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     </div>
@@ -309,7 +313,7 @@
                                                                 </h3>
                                                                 <div class="tech-stack p-2">
                                                                     <div class="tech-circle">
-                                                                        <img src="https://cdn.worldvectorlogo.com/logos/mysql-logo.svg"
+                                                                        <img src="../img/mysql.svg"
                                                                             alt="MySQL" class="adjustment-logo">
                                                                     </div>
                                                                     <div class="tech-circle">
