update roadmap career

--- a/res/pages/home.html
+++ b/res/pages/home.html
@@ -58,11 +58,11 @@
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     </div>
                                     <div class="col-12 p-2 display-5">
-                                        <i class="bi bi-chevron-double-right opacity-0"></i>&nbsp;Projects
+                                        <i class="bi bi-chevron-double-right opacity-0"></i>&nbsp;Pricing
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     </div>
                                     <div class="col-12 p-2 display-5">
-                                        <i class="bi bi-chevron-double-right opacity-0"></i>&nbsp;Pricing
+                                        <i class="bi bi-chevron-double-right opacity-0"></i>&nbsp;Testimonials
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     </div>
                                     <div class="col-12 p-2 display-5">
@@ -80,7 +80,8 @@
                         <div class="row py-3 mt-5">
                             <div class="col-12 d-flex align-items-center justify-content-center">
                                 <div class="name">
-                                    <h1 class="display-1 text-center">Hey, <code class="animate-icon-d4">👋</code> &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <h1 class="display-1 text-center">Hey, <code class="animate-icon-d4">👋</code>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;
                                         It's&nbsp;<span class="name-bold">Upek</span></h1>
                                     <p class="fs-5 text-center">Empowering Businesses by Transforming Ideas into Reality
                                     </p>
@@ -94,7 +95,8 @@
                                             <div class="col-12 p-2">
                                                 <h2 class="display-5">
                                                     <!-- <i class='bx bx-message-dots tech-stack-code yellow-font animate-icon-d4'></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Today, -->
-                                                    <i class='bx bx-map-pin tech-stack-code yellow-font animate-icon-d4'></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Today,
+                                                    <i
+                                                        class='bx bx-map-pin tech-stack-code yellow-font animate-icon-d4'></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Today,
                                                 </h2>
                                                 <p class="fs-5">
                                                     As the TechLead at WEMIXT for the past year, I lead technological
@@ -227,10 +229,6 @@
                                 <div class="row px-2 px-md-3 px-lg-5">
                                     <div class="col-12">
                                         <h2 class="display-4">
-                                            <!-- <lord-icon src="https://cdn.lordicon.com/uvqdhrsk.json" trigger="hover"
-                                                delay="1" stroke="bold" colors="primary:#e4e4e4,secondary:#ffc107"
-                                                style="width:60px; height: 60px;">
-                                            </lord-icon> -->
                                             <i class='bx bxl-codepen tech-stack-code yellow-font animate-icon-d4'></i>
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;What I Got
                                         </h2>
@@ -241,8 +239,9 @@
                                             <div class="col-12 col-md-4">
                                                 <div class="row">
                                                     <div class="col-12">
-                                                        <video src="../vid/spinball-finger.mp4" class="spinball-video"
-                                                            autoplay muted loop></video>
+                                                        <video src="../vid/spinball-finger.mp4"
+                                                            class="spinball-video light-border-bottom" autoplay muted
+                                                            loop></video>
                                                     </div>
                                                 </div>
                                             </div>
@@ -313,8 +312,8 @@
                                                                 </h3>
                                                                 <div class="tech-stack p-2">
                                                                     <div class="tech-circle">
-                                                                        <img src="../img/mysql.svg"
-                                                                            alt="MySQL" class="adjustment-logo">
+                                                                        <img src="../img/mysql.svg" alt="MySQL"
+                                                                            class="adjustment-logo">
                                                                     </div>
                                                                     <div class="tech-circle">
                                                                         <img src="https://cdn.worldvectorlogo.com/logos/mongodb-icon-1.svg"
@@ -323,6 +322,14 @@
                                                                     <div class="tech-circle">
                                                                         <img src="https://cdn.worldvectorlogo.com/logos/firebase-1.svg"
                                                                             alt="Firebase">
+                                                                    </div>
+                                                                    <div class="tech-circle">
+                                                                        <img src="https://cdn.worldvectorlogo.com/logos/google-cloud-1.svg"
+                                                                            alt="Google Cloude Console">
+                                                                    </div>
+                                                                    <div class="tech-circle">
+                                                                        <img src="https://cdn.worldvectorlogo.com/logos/digitalocean-icon-1.svg"
+                                                                            alt="Digital Ocean">
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -387,10 +394,100 @@
                                         <div class="row px-2 px-md-3 px-lg-5">
                                             <div class="col-12">
                                                 <h2 class="display-4">
-                                                    <i class="bx bx-map-alt tech-stack-code yellow-font animate-icon-d4"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My Roadmap
+                                                    <i
+                                                        class="bx bx-map-alt tech-stack-code yellow-font animate-icon-d4"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My
+                                                    Roadmap
                                                 </h2>
                                             </div>
-                                            <div class="col-12"></div>
+                                            <div class="col-12 px-2 px-md-3 px-lg-4">
+                                                <div class="row p-2 p-md-3">
+                                                    <div class="col-12 p-2">
+                                                        <div class="row">
+                                                            <div class="col-12 col-md-4 col-lg-5 py-5">
+                                                                <div class="row py-2 py-md-3">
+                                                                    <div class="col-12">
+                                                                        <div class="row">
+                                                                            <div
+                                                                                class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+                                                                                <div class="bg-light p-3 rounded-3">
+                                                                                    <img src="https://wemixt.com/res/img/logo.png"
+                                                                                        alt="WEMIXT Logo"
+                                                                                        class="roadmap-img">
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="col-12 col-md-8">
+                                                                                <div class="row px-1">
+                                                                                    <div class="col-12 py-1 light-border-bottom">
+                                                                                        <code
+                                                                                            class="yellow-font fw-bolder display-6">WEMIXT</code>
+                                                                                            <div class="selected-text-color">👨‍💻 Senior Software Engineer</div>
+                                                                                            <div class="roadmap-time-text-color">⏱️ Jan 2022 - Dec 2023 · 2 yrs</div>
+                                                                                    </div>
+                                                                                    <div class="col-12 py-1">
+                                                                                        <div class="row">
+                                                                                            <div class="col-12">
+                                                                                                Full-Stack Web
+                                                                                                Application Development.
+                                                                                            </div>
+                                                                                            <div class="col-12">
+                                                                                                Cross-Platform Mobile
+                                                                                                Application Development.
+                                                                                            </div>
+                                                                                            <div class="col-12">
+                                                                                                Inventory Control System
+                                                                                                (POS)
+                                                                                                Application Development.
+                                                                                            </div>
+                                                                                            <div class="col-12">
+                                                                                                Project Management</div>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div
+                                                                class="col-12 col-md-4 col-lg-2 py-5 d-none d-md-block">
+                                                            </div>
+                                                            <div class="col-12 col-md-4 col-lg-5 py-5">
+                                                                <div class="row py-2 py-md-3">
+                                                                    <div class="col-12">
+                                                                        <div class="row">
+                                                                            <div
+                                                                                class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+                                                                                <div class="bg-light p-3 rounded-3">
+                                                                                    <img src="https://wemixt.com/res/img/logo.png"
+                                                                                        alt="WEMIXT Logo"
+                                                                                        class="roadmap-img">
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="col-12 col-md-8">
+                                                                                <div class="row px-1">
+                                                                                    <div class="col-12 py-1 light-border-bottom">
+                                                                                        <code
+                                                                                            class="yellow-font fw-bolder display-6">WEMIXT</code>
+                                                                                            <div class="selected-text-color">👨‍💻 Chief Technology Officer</div>
+                                                                                            <div class="roadmap-time-text-color">⏱️ Jan 2023 - Present · 1 yr 6 mos</div>
+                                                                                    </div>
+                                                                                    <div class="col-12 py-1">
+                                                                                        <div class="row">
+                                                                                            <div class="col-12">
+                                                                                                CTO at WEMIXT | Leading technological innovation for impactful solutions. Passionate about transforming ideas into cutting-edge software solutions.
+                                                                                            </div>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
